# msme-financial-health-card

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  ai_engine.py  analytics_engine.py  app.py  deploy-aws-apprunner.sh  deploy-aws-ec2.sh  deploy-cloud-run.sh  docker-compose.yml  etl_engine.py  main.py  pyproject.toml
.claude/: launch.json
ai/: __init__.py  charts.py  client.py  facts.py  fallback.py  prompts.py  render.py  schemas.py
analytics/: __init__.py  scoring.py  stats_utils.py
components/: __init__.py  auth.py  cards.py  charts.py  data_viewer.py  forms.py  pdf_export.py
context/: SYNTHETIC_DATA_README.md  etl_analytics_implementation_report.md  msme_fhc_context.md  msme_fhc_frontend_context.md
db/: __init__.py  config.py  connection.py  queries.py  schema.py  schema.sql  schema_sqlite.sql
diagrams/: architecture.dot  generate_process_flow.py  process-flow.dot
etl/: __init__.py  lineage.py  normalizers.py  transform.py  validators.py
mock_data/: bank_statements.csv  bank_statements.json  customers.csv  customers.json  epfo_payroll.csv  epfo_payroll.json  gst_filings.csv  gst_filings.json  msme_data_generator.py  upi_transactions.csv  upi_transactions.json
pages/: 1_Login.py  2_Dashboard.py  3_Reports.py
